--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,8 @@
 * when a NFT is rented only the user role is changed. hence it is displayed in collected. then it can be sold. check a solution
 * a solution to when the server is down events are not captured
 * Handle errr when no IPF Hash
+
+
+
+* Update user controller by adding error handling
+* Deposit function event in mint routes
